--- a/cameras/templates/cameras/cameras_categories.html
+++ b/cameras/templates/cameras/cameras_categories.html
@@ -17,7 +17,7 @@
     <a href="{% url 'cameras-preview' %}">
         <div class="module-box" id="detected-objects">
             <img src="{% static '/img/camera.png' %}" alt="octpus_logo_black">
-            <p>Preview</p>
+            <p>Live preview</p>
         </div>
     </a>
     <a href="{% url 'add-camera' %}">
