--- a/detector/static/css/detector_specific_preview_style.css
+++ b/detector/static/css/detector_specific_preview_style.css
@@ -92,10 +92,10 @@ hr:last-child {
 }
 
 .preview-container{
-    width:32.33%;
-    /*width:100%;*/
-    height:35vh;
-    /*height:100%;*/
+    /*width:32.33%;*/
+    width:100%;
+    /*height:35vh;*/
+    height:100%;
     float:left;
     background-color: black;
     color:white;
